[gd_scene load_steps=3 format=3 uid="uid://x0yj4jndodam"]

[ext_resource type="Texture2D" uid="uid://bloq2ywk01u8x" path="res://Entities/UI/CookiePanel/Art/Cookie.png" id="1_yanbf"]
[ext_resource type="Script" path="res://Entities/UI/UpgradeItemPanel/upgrade_item_panel.gd" id="2_5tfdu"]

[node name="TextureRect" type="TextureRect"]
custom_minimum_size = Vector2(64, 64)
texture = ExtResource("1_yanbf")
expand_mode = 1
stretch_mode = 5
script = ExtResource("2_5tfdu")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Tooltip" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = -19.0
offset_top = 64.0
offset_right = 88.0
offset_bottom = 113.0

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Tooltip/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Name"

[node name="CostLabel" type="Label" parent="Tooltip/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "Cost: 1000000
Mult: 1.0
"

[node name="Multlabel" type="Label" parent="Tooltip/VBoxContainer"]
layout_mode = 2

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
